--- a/index.html
+++ b/index.html
@@ -1,36 +1,141 @@
+<!--
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="manifest.json">
     <!-- ios support -->
-    <link rel="apple-touch-icon" href="images/icons/icon-72x72.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-96x96.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-128x128.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-144x144.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-192x192.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-384x384.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-512x512.png">
     <meta name="apple-mobile-web-app-status-bar" content="#db4938">
     <meta name="theme-color" content="#db4938">
-    <title>Dev'Coffee PWA</title>
-  </head>
-  <body>
+    <title>PWA Sample</title>
+</head>
+<body>
     <main>
-      <nav>
-        <h1>Dev'Coffee</h1>
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Blog</li>
-        </ul>
-      </nav>
-      <div class="container"></div>
+        <nav>
+            <h1>PWA Sample</h1>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Blog</li>
+            </ul>
+        </nav>
+
+        <video autoplay style="height:180px; width: 240px;" poster="https://image.freepik.com/free-icon/video-camera-symbol_318-40225.png"></video>
+        <p><button onclick="getStream()">Grab video & start recording</button></p>
+        <!-- Updated button for stopping the recording and saving to cache -->
+        <p><button onclick="stopRecordingAndSaveToCache()">Stop & Save to Cache</button></p>
+        <p><button onclick="downloadFromCache()">Download Video from Cache</button></p>
+        <button id="askButton">Ask for location</button>
+
+<div id="target"></div>
+
+        <table>
+  <tr>
+    <td>API used</td>
+    <td id="moApi"></td>
+  </tr>
+  <tr>
+    <td>linear acceleration (excl. gravity)</td>
+    <td id="moAccel"></td>
+  </tr>
+  <tr>
+    <td>acceleration incl. gravity</td>
+    <td id="moAccelGrav"></td>
+  </tr>
+  <tr>
+    <td>rotation rate</td>
+    <td id="moRotation"></td>
+  </tr>
+  <tr>
+    <td>interval (ms)</td>
+    <td id="moInterval"></td>
+  </tr>
+</table>
+
+<p><small>Demo based on <a href="https://www.html5rocks.com/en/tutorials/device/orientation/" target="_blank" rel="noopener">HTML5 Rocks</a> article.</small></p>
+
     </main>
     <script src="js/app.js"></script>
-  </body>
+
+
+
+</body>
+</html>
+-->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="manifest" href="manifest.json">
+    <!-- ios support -->
+    <meta name="apple-mobile-web-app-status-bar" content="#db4938">
+    <meta name="theme-color" content="#db4938">
+    <title>PWA Sample</title>
+</head>
+<body>
+    <main>
+        <nav>
+            <h1>PWA Sample</h1>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Blog</li>
+            </ul>
+        </nav>
+        <video autoplay style="height:180px; width: 240px;" poster="https://image.freepik.com/free-icon/video-camera-symbol_318-40225.png"></video>
+        <p><button onclick="getStream()">Grab video & start recording</button></p>
+        <!-- Updated button for stopping the recording and saving to cache -->
+        <p><button onclick="stopRecordingAndSaveToCache()">Stop & Save to Cache</button></p>
+        <p><button onclick="downloadFromCache()">Download Video from Cache</button></p>
+        <div class="container">
+            <p>Current permission status is <b id="status">unavailable</b>.</p>
+            <p><button onclick="requestPermission()">Request permission</button></p>
+            <p><button onclick="nonPersistentNotification()">Non-persistent notification</button></p>
+            <p><button onclick="persistentNotification()">Persistent notification</button></p> 
+          <!-- Praktikum 2 -->
+         
+            
+            <button id="askButton">Ask for location</button>
+          <table>
+  <tr>
+    <td>API used</td>
+    <td id="moApi"></td>
+  </tr>
+  <tr>
+    <td>linear acceleration (excl. gravity)</td>
+    <td id="moAccel"></td>
+  </tr>
+  <tr>
+    <td>acceleration incl. gravity</td>
+    <td id="moAccelGrav"></td>
+  </tr>
+  <tr>
+    <td>rotation rate</td>
+    <td id="moRotation"></td>
+  </tr>
+  <tr>
+    <td>interval (ms)</td>
+    <td id="moInterval"></td>
+  </tr>
+</table>
+
+<p><small>Demo based on <a href="https://www.html5rocks.com/en/tutorials/device/orientation/" target="_blank" rel="noopener">HTML5 Rocks</a> article.</small></p>
+
+<div id="target"></div>
+        </div>
+    </main>
+    <script src="js/app.js"></script>
+</body>
 </html>
