--- a/index.html
+++ b/index.html
@@ -145,3 +145,18 @@
 <p>Estimated usage is <b id="percent">unknown</b>%.</p>
 <p>Persistent storage status is <b id="persisted">unknown</b>.</p>
 <p><button onclick="requestPersistence()">Request persistent storage</button></p>
+
+<p>
+  <label>Engine</label>
+</p>
+<div role="group" id="selectEngine">
+  <input type="radio" name="engine" value="localStorage" checked/> Persistent Storage
+  <input type="radio" name="engine" value="sessionStorage"/> Per-Session Storage
+</div>
+
+<p>
+  <label for="value">Value for <code>myKey</code></label>
+  <input type="text" id="value">
+</p>
+
+<p>Open the example in another tab and change the value there to see the synchronization via <code>storage</code> event.</p>
